bluegreen-demo/bluegreen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-demo
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: bluegreen-demo
