bluegreen-demo/bluegreen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo
spec:
  rules:
  - host: bluegreen.trimawin.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluegreen-demo
            port:
              name: http
